--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet"/>
   <style>
     body { background-color: #f8f9fa; }
-    .main-content { max-width: 600px; margin: 3rem auto; background: #fff; padding: 2rem; border-radius: .5rem; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+    .main-content { max-width: 960px; margin: 2rem auto; }
   </style>
 </head>
 <body>
@@ -17,42 +17,83 @@
 <my-navbar></my-navbar>
 
 <div class="main-content">
-  <h4 class="mb-4 text-center"><i class="fa-solid fa-wifi"></i> Form Registrasi Wifi</h4>
+  <div class="card border-success shadow">
+    <div class="card-header bg-success text-white text-center fw-bold">
+      <i class="fa-solid fa-wifi"></i> Form Registrasi Wifi
+    </div>
+    <div class="card-body">
+      <form id="regWifiForm" class="row g-3 needs-validation" novalidate>
 
-  <form id="regWifiForm" class="row g-3 needs-validation" novalidate>
-    <div class="col-12">
-      <label for="nama" class="form-label">Nama Lengkap</label>
-      <input type="text" class="form-control" id="nama" required>
+        <div class="col-md-6">
+          <label for="nama" class="form-label">Nama Lengkap</label>
+          <input type="text" class="form-control" id="nama" required>
+        </div>
+
+        <div class="col-md-6">
+          <label for="email" class="form-label">Email (opsional)</label>
+          <input type="email" class="form-control" id="email" placeholder="contoh@email.com">
+        </div>
+
+        <div class="col-md-12">
+          <label for="alamat" class="form-label">Alamat Pemasangan</label>
+          <textarea class="form-control" id="alamat" rows="2" required></textarea>
+        </div>
+
+        <div class="col-md-2">
+          <label for="rt" class="form-label">RT</label>
+          <input type="text" class="form-control" id="rt" required>
+        </div>
+        <div class="col-md-2">
+          <label for="rw" class="form-label">RW</label>
+          <input type="text" class="form-control" id="rw" required>
+        </div>
+        <div class="col-md-4">
+          <label for="kelurahan" class="form-label">Kelurahan</label>
+          <input type="text" class="form-control" id="kelurahan" required>
+        </div>
+        <div class="col-md-4">
+          <label for="kecamatan" class="form-label">Kecamatan</label>
+          <input type="text" class="form-control" id="kecamatan" required>
+        </div>
+        <div class="col-md-4">
+          <label for="kabupaten" class="form-label">Kabupaten/Kota</label>
+          <input type="text" class="form-control" id="kabupaten" required>
+        </div>
+        <div class="col-md-4">
+          <label for="provinsi" class="form-label">Provinsi</label>
+          <input type="text" class="form-control" id="provinsi" required>
+        </div>
+        <div class="col-md-4">
+          <label for="kodepos" class="form-label">Kode Pos</label>
+          <input type="text" class="form-control" id="kodepos" required>
+        </div>
+
+        <div class="col-md-6">
+          <label for="telepon" class="form-label">No. Telepon</label>
+          <input type="tel" class="form-control" id="telepon" required>
+        </div>
+
+        <div class="col-md-6">
+          <label for="tglPemasangan" class="form-label">Tanggal Pemasangan</label>
+          <input type="date" class="form-control" id="tglPemasangan" required>
+        </div>
+
+        <div class="col-md-6">
+          <label for="paket" class="form-label">Paket Internet</label>
+          <select class="form-select" id="paket" required>
+            <option value="">-- Pilih Paket --</option>
+            <option value="15Mbps - Rp 130.000">15Mbps - Rp 130.000</option>
+            <option value="40Mbps - Rp 210.000">40Mbps - Rp 210.000</option>
+          </select>
+        </div>
+
+        <div class="col-12 d-grid">
+          <button type="submit" class="btn btn-success"><i class="fa-solid fa-paper-plane"></i> Daftar Sekarang</button>
+        </div>
+
+      </form>
     </div>
-    <div class="col-12">
-      <label for="alamat" class="form-label">Alamat Pemasangan</label>
-      <textarea class="form-control" id="alamat" rows="3" required></textarea>
-    </div>
-    <div class="col-6">
-      <label for="telepon" class="form-label">No. Telepon</label>
-      <input type="tel" class="form-control" id="telepon" required>
-    </div>
-    <div class="col-6">
-      <label for="paket" class="form-label">Paket Internet</label>
-      <select class="form-select" id="paket" required>
-        <option value="">-- Pilih Paket --</option>
-        <option value="10Mbps - Rp 150.000">10Mbps - Rp 150.000</option>
-        <option value="20Mbps - Rp 200.000">20Mbps - Rp 200.000</option>
-        <option value="30Mbps - Rp 300.000">30Mbps - Rp 300.000</option>
-      </select>
-    </div>
-    <div class="col-6">
-      <label for="tglPemasangan" class="form-label">Tanggal Pemasangan</label>
-      <input type="date" class="form-control" id="tglPemasangan" required>
-    </div>
-    <div class="col-6">
-      <label for="petugas" class="form-label">Petugas / Account Officer</label>
-      <input type="text" class="form-control" id="petugas" required>
-    </div>
-    <div class="col-12 d-grid mt-3">
-      <button type="submit" class="btn btn-success"><i class="fa-solid fa-paper-plane"></i> Daftar</button>
-    </div>
-  </form>
+  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -60,6 +101,7 @@
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore.js";
   import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js";
 
   const firebaseConfig = {
@@ -72,29 +114,23 @@
   };
 
   const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
   const auth = getAuth(app);
 
-  // Auth Check
+  let currentUser = null;
   onAuthStateChanged(auth, (user) => {
-    if (!user) window.location.href = "login.html";
+    if (!user) return window.location.href = "login.html";
+    currentUser = user;
   });
 
-  // Fungsi Logout
   window.logout = async function () {
-    const result = await Swal.fire({
-      title: "Keluar dari akun?",
-      icon: "warning",
-      showCancelButton: true,
-      confirmButtonText: "Ya, Logout",
-      cancelButtonText: "Batal"
-    });
+    const result = await Swal.fire({ title:"Keluar dari akun?", icon:"warning", showCancelButton:true, confirmButtonText:"Ya, Logout" });
     if (result.isConfirmed) {
       await signOut(auth);
       Swal.fire("Logout berhasil", "", "success").then(() => window.location.href = "login.html");
     }
   };
 
-  // Web Component Navbar
   class MyNavbar extends HTMLElement {
     connectedCallback() {
       this.innerHTML = `
@@ -107,24 +143,42 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a href="/cpanel.html" class="nav-link text-dark"><i class="fa-solid fa-chart-line"></i> Laporan</a></li>
-                <li class="nav-item"><a href="/pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
-                <li class="nav-item"><a href="/pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
-                <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
+                  <li class="nav-item"><a href="/pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
+                  <li class="nav-item"><a href="/pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
+                  <li class="nav-item"><a href="/assets.html" class="nav-link text-dark"><i class="fa-solid fa-box-archive"></i> Assets</a></li>
+                  <li class="nav-item"><a href="/form.html" class="nav-link text-dark"><i class="fa-solid fa-file-lines"></i> Formulir</a></li>
+                  <li class="nav-item"><a href="/pelanggan.html" class="nav-link text-dark"><i class="fa-solid fa-users"></i> Pelanggan</a></li>
+                  <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
               </ul>
             </div>
           </div>
-        </nav>
-      `;
-      setTimeout(() => {
-        const logoutBtn = this.querySelector("#logoutBtn");
-        if (logoutBtn) logoutBtn.addEventListener("click", (e) => { e.preventDefault(); logout(); });
-      }, 0);
+        </nav>`;
+      setTimeout(() => this.querySelector("#logoutBtn")?.addEventListener("click", (e) => { e.preventDefault(); logout(); }), 0);
     }
   }
   customElements.define('my-navbar', MyNavbar);
 
-  // Handle Form Submit
-  document.getElementById("regWifiForm").addEventListener("submit", function(e) {
+  // SweetAlert Syarat Ketentuan on page load
+  window.addEventListener("load", () => {
+    Swal.fire({
+      title: 'Syarat & Ketentuan',
+      html: `
+        <ol class="text-start small ps-3">
+          <li>Lokasi pemasangan sudah terjangkau oleh jaringan layanan GenzetHome.</li>
+          <li>Gratis biaya pemasangan selama masa promosi berlaku.</li>
+          <li>Layanan GenzetHome adalah pra bayar, ditagihkan di awal masa berlangganan dan tagihan akan dikirimkan melalui email atau WhatsApp.</li>
+          <li>Pembayaran tagihan dapat dilakukan melalui Virtual Account Bank, Alfamart, dan Indomaret.</li>
+          <li>Harga langganan sudah termasuk pajak 11%.</li>
+          <li>Kecepatan layanan internet yang ditawarkan adalah kecepatan maksimum yang dapat dicapai.</li>
+        </ol>
+      `,
+      confirmButtonText: 'Saya Setuju',
+      confirmButtonColor: '#198754',
+      allowOutsideClick: false
+    });
+  });
+
+  document.getElementById("regWifiForm").addEventListener("submit", async function(e) {
     e.preventDefault();
     if (!this.checkValidity()) {
       this.classList.add('was-validated');
@@ -133,21 +187,24 @@
 
     const data = {
       nama: document.getElementById("nama").value.trim(),
+      email: document.getElementById("email").value.trim(),
       alamat: document.getElementById("alamat").value.trim(),
-      telepon: document.getElementById("telepon").value.trim(),
+      rt: document.getElementById("rt").value.trim(),
+      rw: document.getElementById("rw").value.trim(),
+      kelurahan: document.getElementById("kelurahan").value.trim(),
+      kecamatan: document.getElementById("kecamatan").value.trim(),
+      kabupaten: document.getElementById("kabupaten").value.trim(),
+      provinsi: document.getElementById("provinsi").value.trim(),
+      kodepos: document.getElementById("kodepos").value.trim(),
+      nohp: document.getElementById("telepon").value.trim(),
       paket: document.getElementById("paket").value,
       tglPemasangan: document.getElementById("tglPemasangan").value,
-      petugas: document.getElementById("petugas").value.trim(),
+      uploader: currentUser?.email || "-"
     };
 
-    console.log(data); // → untuk debug / kirim ke Firestore nanti
+    await addDoc(collection(db, "pelanggan"), data);
 
-    Swal.fire({
-      icon: "success",
-      title: "Registrasi Berhasil!",
-      html: `<b>${data.nama}</b> berhasil mendaftar <br>Paket: <b>${data.paket}</b>`,
-      confirmButtonText: "OK"
-    });
+    Swal.fire({ icon: "success", title: "Registrasi Berhasil!", html: `<b>${data.nama}</b><br>Paket: <b>${data.paket}</b>`, confirmButtonText: "OK" });
 
     this.reset();
     this.classList.remove('was-validated');
