--- a/pelanggan.html
+++ b/pelanggan.html
@@ -11,6 +11,7 @@
   <style>
     body {
       background-color: #f8f9fa;
+      font-family: Arial, sans-serif;
     }
 
     .main-content {
@@ -74,6 +75,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
@@ -111,35 +114,6 @@
       }
     };
 
-    class MyNavbar extends HTMLElement {
-      connectedCallback() {
-        this.innerHTML = `
-          <nav class="navbar navbar-expand-lg navbar-light mb-4 border-bottom border-secondary-subtle">
-            <div class="container-fluid">
-              <a class="navbar-brand fw-bold" href="#">GENZET HOME</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item"><a href="/cpanel.html" class="nav-link text-dark"><i class="fa-solid fa-chart-line"></i> Laporan</a></li>
-                  <li class="nav-item"><a href="/pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
-                  <li class="nav-item"><a href="/pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
-                  <li class="nav-item"><a href="/assets.html" class="nav-link text-dark"><i class="fa-solid fa-box-archive"></i> Assets</a></li>
-                  <li class="nav-item"><a href="/form.html" class="nav-link text-dark"><i class="fa-solid fa-file-lines"></i> Formulir</a></li>
-                  <li class="nav-item"><a href="/approval.html" class="nav-link text-dark"><i class="fa-solid fa-circle-check"></i> Approval</a></li>
-                  <li class="nav-item"><a href="/pelanggan.html" class="nav-link text-dark"><i class="fa-solid fa-users"></i> Pelanggan</a></li>
-                  <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
-                </ul>
-              </div>
-            </div>
-          </nav>`;
-        this.querySelector("#logoutBtn")?.addEventListener("click", (e) => { e.preventDefault(); logout(); });
-      }
-    }
-
-    customElements.define('my-navbar', MyNavbar);
-
     async function loadPelanggan() {
       const tbody = document.getElementById("pelangganTable");
       tbody.innerHTML = "";
@@ -154,14 +128,14 @@
       snapshot.forEach(docSnap => {
         const data = docSnap.data();
         const alamatLengkap = `${data.alamat}, RT ${data.rt}/RW ${data.rw}, ${data.kelurahan}, ${data.kecamatan}, ${data.kabupaten}, ${data.provinsi}, ${data.kodepos}`;
-
         const tr = document.createElement("tr");
         tr.innerHTML = `
           <td>${no++}</td>
           <td>${data.nama}</td>
           <td><span class="badge bg-success">${data.paket}</span></td>
           <td><textarea class="form-control small-textarea" readonly>${alamatLengkap}</textarea></td>
-          <td>
+          <td class="text-nowrap">
+            <button class="btn btn-primary btn-sm me-1" onclick="generateInvoice('${data.nama}', '${data.paket}', \`${alamatLengkap}\`, '${data.invoice || '00000'}')"><i class="fa-solid fa-file-pdf"></i></button>
             <button class="btn btn-danger btn-sm" onclick="hapusPelanggan('${docSnap.id}')" title="Hapus"><i class="fa-solid fa-trash"></i></button>
           </td>
         `;
@@ -183,7 +157,64 @@
       }
     };
 
+    window.generateInvoice = async function (nama, paket, alamat, invoiceNumber) {
+      const periode = new Date().toLocaleString('id-ID', { month: 'long', year: 'numeric' });
+      const nominal = 150000; // **Bisa ubah nominal default di sini**
+
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+
+      doc.setFillColor(0, 51, 153);
+      doc.rect(0, 0, 210, 40, 'F');
+      doc.setFontSize(22);
+      doc.setTextColor(255, 255, 255);
+      doc.text("GENZET HOME", 14, 15);
+      doc.setFontSize(12);
+      doc.text(`NO: ${invoiceNumber}`, 160, 15);
+
+      doc.setTextColor(0, 0, 0);
+      doc.setFontSize(12);
+      doc.text("Bill To:", 14, 50);
+      doc.text(nama, 14, 58);
+      const alamatSplit = doc.splitTextToSize(alamat, 80);
+      doc.text(alamatSplit, 14, 65);
+
+      doc.text("From:", 130, 50);
+      doc.text("GENZET HOME", 130, 58);
+      doc.text("Jl. Bambu Apus, Jakarta Timur", 130, 65);
+
+      doc.text(`Tanggal: ${new Date().toLocaleDateString("id-ID")}`, 14, 80);
+      doc.text(`Periode: ${periode}`, 14, 88);
+
+      doc.autoTable({
+        startY: 100,
+        head: [['Description', 'Qty', 'Price', 'Total']],
+        body: [
+          [`Internet Paket ${paket}`, '1', `Rp${Number(nominal).toLocaleString("id-ID")}`, `Rp${Number(nominal).toLocaleString("id-ID")}`],
+        ],
+        styles: { halign: 'center' },
+        headStyles: { fillColor: [0, 51, 153] },
+      });
+
+      doc.setFontSize(14);
+      doc.text(`Total: Rp${Number(nominal).toLocaleString('id-ID')}`, 160, doc.lastAutoTable.finalY + 10, { align: 'right' });
+
+      doc.setFontSize(10);
+      doc.text("Payment Information:", 14, doc.lastAutoTable.finalY + 25);
+      doc.text("Bank: BANK GENZET", 14, doc.lastAutoTable.finalY + 32);
+      doc.text("No. Rek: 1234567890", 14, doc.lastAutoTable.finalY + 39);
+      doc.text("Email: support@genzet.com", 14, doc.lastAutoTable.finalY + 46);
+
+      doc.setFontSize(16);
+      doc.setTextColor(0, 51, 153);
+      doc.text("Thank You!", 105, doc.lastAutoTable.finalY + 65, null, null, 'center');
+
+      const pdfBlob = doc.output('blob');
+      const pdfUrl = URL.createObjectURL(pdfBlob);
+      window.open(pdfUrl, "_blank");
+    };
   </script>
+
 </body>
 
 </html>
