--- a/pelanggan.html
+++ b/pelanggan.html
@@ -96,17 +96,20 @@
     const db = getFirestore(app);
     const auth = getAuth(app);
 
+    // Auth Check
     onAuthStateChanged(auth, (user) => {
       if (!user) window.location.href = "login.html";
       else loadPelanggan();
     });
 
+    // Logout Function
     window.logout = async function () {
       const result = await Swal.fire({
         title: "Keluar dari akun?",
         icon: "warning",
         showCancelButton: true,
-        confirmButtonText: "Ya, Logout"
+        confirmButtonText: "Ya, Logout",
+        cancelButtonText: "Batal"
       });
       if (result.isConfirmed) {
         await signOut(auth);
@@ -114,6 +117,7 @@
       }
     };
 
+    // Load Pelanggan
     async function loadPelanggan() {
       const tbody = document.getElementById("pelangganTable");
       tbody.innerHTML = "";
@@ -136,13 +140,14 @@
           <td><textarea class="form-control small-textarea" readonly>${alamatLengkap}</textarea></td>
           <td class="text-nowrap">
             <button class="btn btn-primary btn-sm me-1" onclick="generateInvoice('${data.nama}', '${data.paket}', \`${alamatLengkap}\`, '${data.invoice || '00000'}')"><i class="fa-solid fa-file-pdf"></i></button>
-            <button class="btn btn-danger btn-sm" onclick="hapusPelanggan('${docSnap.id}')" title="Hapus"><i class="fa-solid fa-trash"></i></button>
+            <button class="btn btn-danger btn-sm" onclick="hapusPelanggan('${docSnap.id}')"><i class="fa-solid fa-trash"></i></button>
           </td>
         `;
         tbody.appendChild(tr);
       });
     }
 
+    // Delete Pelanggan
     window.hapusPelanggan = async function (id) {
       const confirm = await Swal.fire({
         title: 'Hapus pelanggan?',
@@ -157,9 +162,10 @@
       }
     };
 
+    // Generate Invoice PDF
     window.generateInvoice = async function (nama, paket, alamat, invoiceNumber) {
       const periode = new Date().toLocaleString('id-ID', { month: 'long', year: 'numeric' });
-      const nominal = 150000; // **Bisa ubah nominal default di sini**
+      const nominal = 150000;
 
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF();
@@ -189,11 +195,9 @@
       doc.autoTable({
         startY: 100,
         head: [['Description', 'Qty', 'Price', 'Total']],
-        body: [
-          [`Internet Paket ${paket}`, '1', `Rp${Number(nominal).toLocaleString("id-ID")}`, `Rp${Number(nominal).toLocaleString("id-ID")}`],
-        ],
+        body: [[`Internet Paket ${paket}`, '1', `Rp${Number(nominal).toLocaleString("id-ID")}`, `Rp${Number(nominal).toLocaleString("id-ID")}`]],
         styles: { halign: 'center' },
-        headStyles: { fillColor: [0, 51, 153] },
+        headStyles: { fillColor: [0, 51, 153] }
       });
 
       doc.setFontSize(14);
@@ -213,6 +217,43 @@
       const pdfUrl = URL.createObjectURL(pdfBlob);
       window.open(pdfUrl, "_blank");
     };
+
+    // Web Component Navbar
+    class MyNavbar extends HTMLElement {
+      connectedCallback() {
+        this.innerHTML = `
+          <nav class="navbar navbar-expand-lg navbar-light mb-4 border-bottom border-secondary-subtle">
+            <div class="container-fluid">
+              <a class="navbar-brand fw-bold" href="#">GENZET HOME</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item"><a href="/cpanel.html" class="nav-link text-dark"><i class="fa-solid fa-chart-line"></i> Laporan</a></li>
+                  <li class="nav-item"><a href="/pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
+                  <li class="nav-item"><a href="/pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
+                  <li class="nav-item"><a href="/assets.html" class="nav-link text-dark"><i class="fa-solid fa-box-archive"></i> Assets</a></li>
+                  <li class="nav-item"><a href="/form.html" class="nav-link text-dark"><i class="fa-solid fa-file-lines"></i> Formulir</a></li>
+                  <li class="nav-item"><a href="/approval.html" class="nav-link text-dark"><i class="fa-solid fa-circle-check"></i> Approval</a></li>
+                  <li class="nav-item"><a href="/pelanggan.html" class="nav-link text-dark"><i class="fa-solid fa-users"></i> Pelanggan</a></li>
+                  <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        `;
+
+        setTimeout(() => {
+          const logoutBtn = this.querySelector("#logoutBtn");
+          if (logoutBtn) logoutBtn.addEventListener("click", (e) => {
+            e.preventDefault();
+            logout();
+          });
+        }, 0);
+      }
+    }
+    customElements.define('my-navbar', MyNavbar);
   </script>
 
 </body>
