--- a/pemasukan.html
+++ b/pemasukan.html
@@ -7,11 +7,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <style>
     html, body { margin:0; padding:0; background:#f8f9fa; }
     .main-content { padding:2rem 1rem; max-width:960px; margin:auto; background:#fff; border-radius:.5rem; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
     .table th, .table td { vertical-align:middle; }
     .filter-icon { cursor:pointer; margin-left:0.3rem; }
+    .table td { text-align: left !important; }
+    .table td {
+  text-align: left !important;
+  white-space: nowrap;
+}
   </style>
 </head>
 <body>
@@ -48,17 +54,18 @@
     <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
       <div><i class="fa-solid fa-table"></i> Riwayat Pemasukan</div>
       <div>
-        <i id="deleteSelectedBtn" class="fa-solid fa-trash" style="cursor:pointer; color:#fff; font-size:1.2rem; margin-right:0.8rem;" title="Hapus Terpilih"></i>
+        <i id="deleteSelectedBtn" class="fa-solid fa-trash me-2" style="cursor:pointer; color:#fff; font-size:1.2rem;" title="Hapus Terpilih"></i>
+        <i id="exportExcelBtn" class="fa-solid fa-file-excel me-2" style="cursor:pointer; color:#fff; font-size:1.2rem;" title="Export Excel"></i>
         <i id="clearFilterBtn" class="fa-solid fa-filter-circle-xmark" style="cursor:pointer; color:#fff; font-size:1.2rem;" title="Clear Filter"></i>
       </div>
     </div>
     <div class="card-body p-0 table-responsive">
-      <table class="table table-striped mb-0" id="tablePemasukan">
+      <table class="table table-striped mb-0 text-start" id="tablePemasukan">
         <thead class="table-light text-nowrap">
           <tr>
-            <th>Nomor</th>
+            <th class="text-center">Nomor</th>
             <th><span class="filter-text" data-col="keterangan" style="cursor:pointer;">Nama</span> <i class="fa-solid fa-caret-down filter-icon" data-col="keterangan"></i></th>
-            <th><span class="filter-text" data-col="kuantitas" style="cursor:pointer;">Kuantitas</span> <i class="fa-solid fa-caret-down filter-icon" data-col="kuantitas"></i></th>
+            <th class="text-center"><span class="filter-text" data-col="kuantitas" style="cursor:pointer;">Kuantitas</span> <i class="fa-solid fa-caret-down filter-icon" data-col="kuantitas"></i></th>
             <th><span class="filter-text" data-col="jumlah" style="cursor:pointer;">Nominal</span> <i class="fa-solid fa-caret-down filter-icon" data-col="jumlah"></i></th>
             <th><span class="filter-text" data-col="uploader" style="cursor:pointer;">Uploader</span> <i class="fa-solid fa-caret-down filter-icon" data-col="uploader"></i></th>
             <th><span class="filter-text" data-col="tanggal" style="cursor:pointer;">Tanggal & Waktu</span> <i class="fa-solid fa-caret-down filter-icon" data-col="tanggal"></i></th>
@@ -105,6 +112,12 @@
     if (!user) window.location.href = "login.html";
   });
 
+  function formatUploader(email) {
+    if (!email || typeof email !== "string") return "-";
+    const username = email.split("@")[0];
+    return username.charAt(0).toUpperCase() + username.slice(1).toLowerCase();
+  }
+
   async function loadData() {
     const q = query(collection(db, "pemasukan"), orderBy("tanggal", "desc"));
     const snapshot = await getDocs(q);
@@ -119,15 +132,16 @@
     data.forEach((item, idx) => {
       total += parseInt(item.jumlah || 0);
       tbody.innerHTML += `
-        <tr>
-          <td>${idx + 1}</td>
-          <td>${item.keterangan || "-"}</td>
-          <td>${item.kuantitas || "-"}</td>
-          <td>Rp ${parseInt(item.jumlah || 0).toLocaleString()}</td>
-          <td>${item.uploader || "-"}</td>
-          <td>${item.tanggal || "-"}</td>
-          <td><input type="checkbox" class="rowCheckbox" value="${item.id}"></td>
-        </tr>`;
+  <tr>
+    <td class="text-center">${idx + 1}</td>
+    <td>${item.keterangan || "-"}</td>
+    <td class="text-center">${item.kuantitas || "-"}</td>
+    <td style="white-space:nowrap;">Rp ${parseInt(item.jumlah || 0).toLocaleString()}</td>
+    <td>${formatUploader(item.uploader)}</td>
+    <td>${item.tanggal || "-"}</td>
+    <td><input type="checkbox" class="rowCheckbox" value="${item.id}"></td>
+  </tr>`;
+
     });
     totalEl.textContent = "Rp " + total.toLocaleString();
   }
@@ -158,6 +172,63 @@
       for (const id of selectedIds) await deleteDoc(doc(db, "pemasukan", id));
       await loadData();
       Swal.fire({ toast:true, position:"top-end", icon:"success", title:"Data terhapus", showConfirmButton:false, timer:2000 });
+    }
+  });
+
+  document.getElementById("exportExcelBtn").addEventListener("click", () => {
+    const selectedCheckboxes = document.querySelectorAll(".rowCheckbox:checked");
+
+    if (selectedCheckboxes.length === 0) {
+      Swal.fire({
+        title: "Export Semua Data?",
+        text: "Tidak ada data dipilih. Tetap ekspor semua?",
+        icon: "question",
+        showCancelButton: true,
+        confirmButtonText: "Ya, Semua",
+        cancelButtonText: "Batal"
+      }).then((res) => {
+        if (res.isConfirmed) {
+          exportToExcel(filteredData.length ? filteredData : dataSemua);
+        }
+      });
+    } else {
+      Swal.fire({
+        title: "Ekspor Data Terpilih?",
+        text: `Ekspor ${selectedCheckboxes.length} data tercentang?`,
+        icon: "question",
+        showCancelButton: true,
+        confirmButtonText: "Ya, Ekspor",
+        cancelButtonText: "Batal"
+      }).then((res) => {
+        if (res.isConfirmed) {
+          const selectedIds = [...selectedCheckboxes].map(cb => cb.value);
+          const selectedData = (filteredData.length ? filteredData : dataSemua).filter(item => selectedIds.includes(item.id));
+          exportToExcel(selectedData);
+        }
+      });
+    }
+
+    function exportToExcel(dataExport) {
+      const exportData = dataExport.map((item, idx) => ({
+        No: idx + 1,
+        Nama: item.keterangan || "-",
+        Kuantitas: item.kuantitas || 0,
+        Nominal: item.jumlah || 0,
+        Uploader: formatUploader(item.uploader),
+        "Tanggal & Waktu": item.tanggal || "-"
+      }));
+
+      const ws = XLSX.utils.json_to_sheet(exportData);
+      const wb = XLSX.utils.book_new();
+      XLSX.utils.book_append_sheet(wb, ws, "Pemasukan");
+
+      const colWidths = Object.keys(exportData[0] || {}).map(key => {
+        const maxLen = Math.max(...exportData.map(d => String(d[key]).length), key.length);
+        return { wch: maxLen + 2 };
+      });
+      ws['!cols'] = colWidths;
+
+      XLSX.writeFile(wb, "data_pemasukan.xlsx");
     }
   });
 
@@ -226,18 +297,17 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-               <ul class="navbar-nav ms-auto">
-  <li class="nav-item"><a href="/cpanel.html" class="nav-link text-dark"><i class="fa-solid fa-chart-line"></i> Laporan</a></li>
-  <li class="nav-item"><a href="/pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
-  <li class="nav-item"><a href="/pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
-  <li class="nav-item"><a href="/assets.html" class="nav-link text-dark"><i class="fa-solid fa-box-archive"></i> Assets</a></li>
-  <li class="nav-item"><a href="/form.html" class="nav-link text-dark"><i class="fa-solid fa-file-lines"></i> Formulir</a></li>
-  <!-- ✅ Tambahan Approval -->
-  <li class="nav-item"><a href="/approval.html" class="nav-link text-dark"><i class="fa-solid fa-circle-check"></i> Approval</a></li>
-  <li class="nav-item"><a href="/pelanggan.html" class="nav-link text-dark"><i class="fa-solid fa-users"></i> Pelanggan</a></li>
-  <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
-</ul>
-          </div>
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a href="/cpanel.html" class="nav-link text-dark"><i class="fa-solid fa-chart-line"></i> Laporan</a></li>
+                <li class="nav-item"><a href="/pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
+                <li class="nav-item"><a href="/pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
+                <li class="nav-item"><a href="/assets.html" class="nav-link text-dark"><i class="fa-solid fa-box-archive"></i> Assets</a></li>
+                <li class="nav-item"><a href="/form.html" class="nav-link text-dark"><i class="fa-solid fa-file-lines"></i> Formulir</a></li>
+                <li class="nav-item"><a href="/approval.html" class="nav-link text-dark"><i class="fa-solid fa-circle-check"></i> Approval</a></li>
+                <li class="nav-item"><a href="/pelanggan.html" class="nav-link text-dark"><i class="fa-solid fa-users"></i> Pelanggan</a></li>
+                <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
+              </ul>
+            </div>
           </div>
         </nav>`;
       setTimeout(() => {
