--- a/pelanggan.html
+++ b/pelanggan.html
@@ -132,7 +132,7 @@
         const tr = document.createElement("tr");
         tr.innerHTML = `
           <td>${no++}</td>
-          <td>${data.nama}</td>
+          <td class="text-start align-middle">${data.nama}</td>
           <td><span class="badge bg-success">${data.paket}</span></td>
           <td><textarea class="form-control small-textarea" readonly>${alamatLengkap}</textarea></td>
           <td class="text-nowrap">
@@ -169,9 +169,9 @@
       const noInvoice = `INV-${kodePelanggan}${invoiceMonthYear}`;
 
       Swal.fire({
-        title: 'Memproses Invoice...',
+        title: '<div style="font-size: .9rem;">Memproses Invoice...</div>',
         html: '<div class="d-flex justify-content-center"><div class="spinner-border text-primary" role="status"></div></div>',
-        timer: 800,
+        timer: 1000,
         allowOutsideClick: false,
         showConfirmButton: false,
         willClose: () => {
@@ -229,7 +229,7 @@
 
           doc.setFontSize(10);
           doc.text("Payment Information:", 14, doc.lastAutoTable.finalY + 10);
-          doc.text("Bank: BANK GENZET", 14, doc.lastAutoTable.finalY + 17);
+          doc.text("Bank: BANK BCA", 14, doc.lastAutoTable.finalY + 17);
           doc.text("No. Rek: 1234567890", 14, doc.lastAutoTable.finalY + 24);
           doc.text("Email: support@genzet.com", 14, doc.lastAutoTable.finalY + 31);
 
