--- a/cpanel.html
+++ b/cpanel.html
@@ -66,9 +66,9 @@
   </div>
 </div>
   
-  <div class="card border-success mb-3" style="max-width: 24rem;">
+    <div class="card mb-4" style="max-width: 24rem;">
     <div class="card-header bg-success text-white">
-      <i class="fas fa-cloud-sun"></i> Cuaca Terkini
+      <i class="fa-solid fa-chart-bar"></i> Perbandingan
     </div>
     <div class="card-body text-success">
       <h5 class="card-title">Citra Mulya Raya, Cibarusah</h5>
@@ -77,11 +77,12 @@
       </div>
     </div>
   </div>
+
   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-  <script type="module">
+   <script type="module">
     const API_KEY = "1c02b03323602402ca922b951c366cc9";
     const LAT = -6.3521;
     const LON = 107.0577;
